[package]
name = "compilethyme"
version = "0.1.0"
build = "build.rs"  # LALRPOP preprocessing
authors = [
  "Richard Lupton <richard.lupton@gmail.com>",
  "Blake Hawkins <blake.hawkins.11@gmail.com>"
]

[dependencies]
anyhow = "1.0"
lalrpop-util = "0.19"
regex        = "1"
structopt    = "0.2"
thiserror = "1.0.32"

[build-dependencies]
anyhow = "1.0"
lalrpop = "0.19"
